Add seed query param to bingocard endpoint
