# api.yaml
@@ -156,6 +156,12 @@ paths:
             default: []
             items:
               type: string
+          - name: seed
+            in: query
+            required: false
+            description: The seed to use when generating a bingo card
+            schema:
+              type: integer
       responses:
         '200':
           description: A JSON object representing the generated bingo card
